# wanaka_profiles

./: application.conf  login.http  package.yaml  profiles.cabal  profiles_20241212_171858.sql  server.crt  server.csr  server.key  server.key.org  stack.yaml  tenants_20241212_171829.sql  validate.http
.stack-work/: stack.sqlite3
.stack-work/ghci/1660b9ab/: cabal_macros.h
.stack-work/ghci/31c0b213/: cabal_macros.h
.stack-work/ghci/3f3e9931/: cabal_macros.h
.stack-work/ghci/443be7a0/: cabal_macros.h
.stack-work/ghci/73dffeb3/: cabal_macros.h
.stack-work/ghci/8fc06448/: cabal_macros.h
.stack-work/ghci/91fcc0d3/: cabal_macros.h
Request/: login.http  profile.http  refresh.http  validate.http
Request/Group/: create.http  retrieve.http
Request/Mapping/: create.http  retrieve.http
Request/Permissions/: create.http
db/: wanaka_profiles_20250430_190100.sql
dist-newstyle/cache/: compiler  config
src/: Domain.hs  Main.hs  Views.hs
src/DTOs/: ProfileDTO.hs
src/Helpers/: Evaluator.hs  Hardcoded.hs
src/controller/: Auth.hs  GroupController.hs  PermissionsController.hs  ProfileController.hs  ProfilesController.hs  ResourceMapController.hs  TenantController.hs
src/db/: Connection.hs  Db.hs  Group.hs  Profile.hs  Profiles.hs  ResourceMap.hs  Tenant.hs  UserPermissions.hs
src/dto/: AuthDTO.hs  ErrorMessage.hs  GroupsDTO.hs  ProfileDTO.hs  ResourceMapDTO.hs  TenantDTO.hs  UserPermissionsDTO.hs  Views.hs
src/helpers/: Evaluator.hs
