name:                profiles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/profiles#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable profiles
    hs-source-dirs: src
                    ,src/db
                    ,src/controller
    main-is:        Main.hs
    ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
    default-extensions:     OverloadedStrings
    default-language: Haskell2010
    build-depends:  base                          >=4.17
                    , scotty                        >= 0.9.1
                    , bytestring                    >= 0.9        && < 0.11
                    , text                          >= 0.11       && < 2.0
                    , postgresql-simple             >= 0.4.10.0
                    , aeson                         >= 0.6        && < 0.9
                    , transformers                  >= 0.4.3.0
                    , wai                           >= 3.0.2.3
                    , wai-middleware-static         >= 0.7.0.1
                    , wai-extra                     >= 3.0.7
                    , resource-pool                 >= 0.2.3.2
                    , configurator                  >= 0.3.0.0
                    , MissingH                      >= 1.3.0.1
                    , lens                          >=4.5
                    , lens-aeson                    >=1.0.2
                    , wreq                          >=0.5.3.2
                    , http-types
                    , time
    other-modules: 
        Domain
        , Views
        , Db
        , Profiles
        , ProfilesController
        